# solana-watchtower

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml  deny.toml
.githooks/: pre-push
.github/workflows/: ci.yml
configs/: watchtower.toml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs  main.rs
crates/cli/src/commands/: mod.rs  rules.rs  start.rs  status.rs  stop.rs  test_notifications.rs  validate_config.rs
crates/dashboard/: Cargo.toml  askama.toml
crates/dashboard/src/: handlers.rs  lib.rs  templates.rs  websocket.rs
crates/dashboard/static/: app.js  style.css
crates/dashboard/templates/: alerts.html  base.html  index.html  metrics.html  rules.html  settings.html
crates/engine/: Cargo.toml
crates/engine/src/: alerts.rs  engine.rs  lib.rs  metrics.rs  rules.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: channels.rs  config.rs  error.rs  lib.rs  manager.rs  templates.rs
crates/notifier/templates/: discord_default.txt  email_batch.html  email_default.html  slack_default.txt  telegram_default.md
crates/subscriber/: Cargo.toml
crates/subscriber/src/: client.rs  config.rs  error.rs  events.rs  filters.rs  lib.rs
docker/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  env.example  nginx.conf  prometheus.yml
docker/grafana/dashboards/: watchtower-overview.json
docker/grafana/provisioning/dashboards/: default.yml
docker/scripts/: setup.sh
docs/: business_overview.md  project_overview.md
examples/: README.md
examples/configs/: basic-mainnet.toml  defi-focused.toml  devnet-testing.toml  nft-marketplace.toml  production-multi-program.toml
examples/deployment/kubernetes/: watchtower-deployment.yaml
examples/integrations/: webhook-receiver.py
examples/notifications/slack/: defi-alert.json
examples/notifications/telegram/: liquidation-alert.md
examples/programs/spl-token/: monitoring-config.toml
examples/rules/: defi-liquidation-rules.rs  whale-activity-rules.rs
scripts/: README.md  generate_pdf.py  run-tests.sh
solsec-results/: security-report.html  security-report.json
