[package]
name = "watchtower-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Solana Watchtower monitoring system"

[[bin]]
name = "watchtower"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
validator = { workspace = true }

# Local workspace crates
watchtower-subscriber = { path = "../subscriber" }
watchtower-engine = { path = "../engine" }
watchtower-notifier = { path = "../notifier" }

# Additional dependencies
console = "0.15"
indicatif = "0.17"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2" 