[package]
name = "watchtower-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web dashboard backend for Solana Watchtower monitoring system"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }

# Local workspace crates
watchtower-engine = { path = "../engine" }

# Web framework dependencies
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
futures = "0.3"

# Additional dependencies
askama = "0.12"
mime_guess = "2.0"
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4" 