[package]
name = "watchtower-notifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-channel notification system for Solana monitoring alerts"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }

# Additional dependencies
async-trait = "0.1"
tera = "1.19"
governor = "0.6"
nonzero_ext = "0.3" 